--- a/assets/scss/components/_sidebar-menu.scss
+++ b/assets/scss/components/_sidebar-menu.scss
@@ -41,10 +41,10 @@
     margin-bottom: 25px;
     .menu-link {
       text-decoration: none;
-      font-size: 14px;
+      font-size: 14px  !important;
       font-weight: 500;
       color: $secondary;
-      padding: 12px;
+      padding: 12px  !important;
       border-radius: 5px;
       white-space: nowrap;
       transition: $transition;
